[gd_scene load_steps=12 format=3 uid="uid://dv3modv7xfm7v"]

[ext_resource type="Script" path="res://scenes/interfaces/title-ui.gd" id="1_6b8v1"]
[ext_resource type="Theme" uid="uid://b4atemhgbubb6" path="res://theme/clock_theme.tres" id="1_euhif"]
[ext_resource type="AudioStream" uid="uid://b06f43m3386ao" path="res://music/background-loop-straight-04-2699.mp3" id="2_wv0bl"]
[ext_resource type="Shader" path="res://shaders/rainbow_outline.gdshader" id="3_dafjb"]
[ext_resource type="Shader" path="res://shaders/rainbow.gdshader" id="3_lu0ld"]
[ext_resource type="FontFile" uid="uid://i88f0hve74ou" path="res://theme/CloisterBlack.ttf" id="4_6xdmj"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5r0fa"]
shader = ExtResource("3_dafjb")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_scale = 1.2
shader_parameter/frequency = 0.5
shader_parameter/light_offset = 0.5
shader_parameter/alpha = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gh111"]
shader = ExtResource("3_dafjb")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_scale = 1.2
shader_parameter/frequency = 0.5
shader_parameter/light_offset = 0.5
shader_parameter/alpha = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6q8r2"]
shader = ExtResource("3_dafjb")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_scale = 0.2
shader_parameter/frequency = 0.2
shader_parameter/light_offset = 0.5
shader_parameter/alpha = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5103s"]
shader = ExtResource("3_lu0ld")
shader_parameter/strength = 0.5
shader_parameter/speed = 0.5
shader_parameter/angle = 15.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_retre"]
shader = ExtResource("3_lu0ld")
shader_parameter/strength = 0.5
shader_parameter/speed = 0.5
shader_parameter/angle = 15.0

[node name="TitleUI" type="Control"]
custom_minimum_size = Vector2(1152, 648)
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_euhif")
script = ExtResource("1_6b8v1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 100
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Title" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TitleBackLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/Title"]
material = SubResource("ShaderMaterial_5r0fa")
custom_minimum_size = Vector2(375, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/bold_font_size = 77
bbcode_enabled = true
text = "[right][b]Weird[/b][/right]"
visible_characters_behavior = 4

[node name="TitleFrontLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/Title/TitleBackLabel"]
custom_minimum_size = Vector2(375, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/bold_font_size = 77
bbcode_enabled = true
text = "[right][b]Weird[/b][/right]"

[node name="TitleBackLabel2" type="RichTextLabel" parent="MarginContainer/VBoxContainer/Title"]
material = SubResource("ShaderMaterial_gh111")
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/bold_font_size = 77
bbcode_enabled = true
text = "[center][b]Clock[/b][/center]"

[node name="TitleFrontLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/Title/TitleBackLabel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/bold_font_size = 77
bbcode_enabled = true
text = "[center][b]Clock[/b][/center]"

[node name="TitleBackLabel3" type="RichTextLabel" parent="MarginContainer/VBoxContainer/Title"]
material = SubResource("ShaderMaterial_gh111")
custom_minimum_size = Vector2(375, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/bold_font_size = 77
bbcode_enabled = true
text = "[b]Thing[/b]"

[node name="TitleFrontLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/Title/TitleBackLabel3"]
custom_minimum_size = Vector2(375, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/bold_font_size = 77
bbcode_enabled = true
text = "[b]Thing[/b]"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 400
theme_override_constants/margin_right = 400

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
material = SubResource("ShaderMaterial_6q8r2")
layout_mode = 2

[node name="GoButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
material = SubResource("ShaderMaterial_5103s")
layout_mode = 2
text = "Go!"

[node name="TimeLasted" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
visible = false
use_parent_material = true
layout_mode = 2
size_flags_vertical = 10

[node name="TimeLastedTitleLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/TimeLasted"]
use_parent_material = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "[b]Time[/b] Played:"

[node name="TimeLastedStatusLabel" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/TimeLasted"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 10
text = "0"

[node name="Score" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
visible = false
use_parent_material = true
layout_mode = 2
size_flags_vertical = 2

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/Score"]
use_parent_material = true
layout_mode = 2
text = "Score: "

[node name="Status" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/Score"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 10
text = "00000"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_wv0bl")
volume_db = -20.0
autoplay = true

[node name="Subtitles" type="Control" parent="."]
material = SubResource("ShaderMaterial_retre")
anchors_preset = 0
rotation = 5.23599
pivot_offset = Vector2(-250, 240)

[node name="SubTitle1" type="RichTextLabel" parent="Subtitles"]
use_parent_material = true
layout_mode = 0
offset_left = 260.0
offset_top = 200.0
offset_right = 895.0
offset_bottom = 260.0
theme_override_fonts/normal_font = ExtResource("4_6xdmj")
theme_override_font_sizes/normal_font_size = 46
bbcode_enabled = true
text = "[center]Indescribable Clock Action![/center]"

[node name="SubTitle2" type="RichTextLabel" parent="Subtitles"]
use_parent_material = true
layout_mode = 0
offset_left = -29.6411
offset_top = -221.673
offset_right = 605.359
offset_bottom = -161.673
rotation = -1.0472
theme_override_fonts/normal_font = ExtResource("4_6xdmj")
theme_override_font_sizes/normal_font_size = 46
bbcode_enabled = true
text = "[center]Not like a real clock at all![/center]"

[node name="SubTitle3" type="RichTextLabel" parent="Subtitles"]
use_parent_material = true
layout_mode = 0
offset_left = -539.641
offset_top = -181.673
offset_right = 95.359
offset_bottom = -121.673
rotation = -2.0944
theme_override_fonts/normal_font = ExtResource("4_6xdmj")
theme_override_font_sizes/normal_font_size = 46
bbcode_enabled = true
text = "[center]Not even like a real game![/center]"

[node name="SubTitle4" type="RichTextLabel" parent="Subtitles"]
use_parent_material = true
layout_mode = 0
offset_left = -760.0
offset_top = 280.0
offset_right = -125.0
offset_bottom = 340.0
rotation = -3.14159
theme_override_fonts/normal_font = ExtResource("4_6xdmj")
theme_override_font_sizes/normal_font_size = 46
bbcode_enabled = true
text = "[center]Now with more colors![/center]"

[node name="SubTitle5" type="RichTextLabel" parent="Subtitles"]
use_parent_material = true
layout_mode = 0
offset_left = -470.359
offset_top = 701.673
offset_right = 164.641
offset_bottom = 761.673
rotation = -4.18879
theme_override_fonts/normal_font = ExtResource("4_6xdmj")
theme_override_font_sizes/normal_font_size = 46
bbcode_enabled = true
text = "[center]You won't believe that you played![/center]"

[node name="Timer" type="Timer" parent="Subtitles"]
wait_time = 2.0
autostart = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/GoButton" to="." method="_on_go_button_pressed"]
[connection signal="timeout" from="Subtitles/Timer" to="." method="_on_timer_timeout"]
